[B]1.0.1:[/B]
 - added putlocker resolver
[B]1.0.0:[/B]
Initial version