@@ -1,3 +1,7 @@
+[B]1.0.3:[/B]
+- added other resolvers
+- added simple debug logging
+- all resovlers renamed not to collide with other 3rd party on Camelot
 [B]1.0.1:[/B]
  - added putlocker resolver
 [B]1.0.0:[/B]
